<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_input_record"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.hnkhan.hnkhan_sizebook.InputRecordActivity">
    
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_field" />

        <EditText android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_name"
            android:maxLines="1"
            android:inputType = "text" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_field" />

        <EditText android:id="@+id/edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_date"
            android:maxLines="1"
            android:inputType = "text" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neck_field" />

        <EditText android:id="@+id/neck_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_dimension"
            android:maxLines="1"
            android:inputType = "text" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bust_field" />

        <EditText android:id="@+id/bust_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_dimension"
            android:maxLines="1"
            android:inputType = "text" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chest_field" />

        <EditText android:id="@+id/chest_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_dimension"
            android:maxLines="1"
            android:inputType = "text" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waist_field" />

        <EditText android:id="@+id/waist_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_dimension"
            android:maxLines="1"
            android:inputType = "text" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hip_field" />

        <EditText android:id="@+id/hip_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_dimension"
            android:maxLines="1"
            android:inputType = "text" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inseam_field" />

        <EditText android:id="@+id/inseam_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_dimension"
            android:maxLines="1"
            android:inputType = "text" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_field" />

        <EditText android:id="@+id/comment_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_comment"
            android:inputType="textMultiLine"
            android:maxLines="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/save_record_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_record" />

    </LinearLayout>





    
</LinearLayout>
