<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.hnkhan.hnkhan_sizebook.MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_title" />

    <ListView
        android:id="@+id/recordsList"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical">

    </ListView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_record_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_record"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/delete_record_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_record"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
